# face-recognition

./: .gitignore  CMakeLists.txt  README.md  checkget.h  detect.h  facenet.ipynb  facenet.py  facenet_utils.py  imgproc.h  load_and_reorganize.py  main.cpp  requirements.txt  widerface.yaml
detector/: detector.py  utils.py
